@@ -1,1 +1,1 @@
-__version__ = '2.0.0a2'
+__version__ = '2.0.0b'
